Bug 1634596 - Avoid switching into a new process if an ancestor is discarded, r=farre

This is a temporary workaround for the crashes this can cause. A more thorough
fix to discarded ancestor issues will be implemented in bug 1634759.

Differential Revision: https://phabricator.services.mozilla.com/D74101